Fixes based on review #39